src/web/styles/main.css
* {
	box-sizing: border-box;
}
:root {
	--body-color: white;
	--text-color: black;
}
body{
	margin: 0;
	padding: 0;
	font-family: sans-serif;
	background: var(--body-color);
	color: var(--text-color);
}

.header{
	display: flex;
	justify-content: space-between;
	align-items: center;
	height: 50px;
	padding: 0 10px;
	position: relative;
}

.logo{
	display: flex;
	height: 100%;
	align-items: center;
	gap: 5px;
	user-select: none;
	color: var(--text-color);
	text-decoration: none;
	font-size: 18pt;
}
.logo:hover{
	text-decoration: underline;
}
.logo img{
	height: 60%;
}


.right-header {
	display: flex;
	align-items: center;
	gap: 12px;
	font-size: 24pt;
	height: 100%;
}
.right-header > * {
	cursor: pointer;
}

.settings-button i{
	transition: 0.25s;
}
.settings-button:hover i{
	transform: rotate(90deg);
}

.profile-button {
	height: 100%;
	display: flex;
	align-items: center;
}
.profile-button img{
	height: 70%;
	border-radius: 50%;
}
.profile-button img[src]:not([src=""]) + i{
	display: none;
}

.account_menu{
	position: absolute;
	right: 4px;
	bottom: 0;
	translate: 0 100%;
	background: var(--body-color);
	z-index: 2;
	display: flex;
	flex-direction: column;
	gap: 5px;
	padding: 4px;
	border-radius: 10px;
	filter: drop-shadow(-2px 4px 4px rgb(0, 0, 0, 0.4));
	max-height: 75vh;
	overflow: auto;
	scrollbar-width: thin;
	transition: 0.35s cubic-bezier(0.22, 1, 0.36, 1);
	scale: 0.9;
	opacity: 0;
	transform: translateY(10px);
	transform-origin: bottom center;
	will-change: scale;
}
.account_menu.open {
	transform: translateY(0);
	opacity: 1;
	scale: 1;
}
.account_menu button img {
	height: 16px;
	border-radius: 50%;
}

#users-list{
	display: contents;
}

.search-wrapper {
	display: flex;
	justify-content: center;
	margin-top: 20px;
}
.search-container {
	display: flex;
	align-items: center;
	background: #eee;
	width: 75%;
	border-radius: 25px;
	font-size: 16px;
	transition: 0.25s;
	margin: 0 10px;
	user-select: none;
}
.search-container.disabled{
	filter: brightness(0.5);
	opacity: 0.5;
	pointer-events: none;
}
.search-container:focus-within {
	width: 85%;
}
.search-container input {
	width: 100%;
	padding: 12px 0 12px 0;
	font-size: inherit;
	background: transparent;
	border: none;
	outline: none;
}
.search-container i {
	cursor: pointer;
	height: 35px;
	width: 35px;
	flex-shrink: 0;
	margin: 0 4px;
	border-radius: 20px;
	display: flex;
	align-items: center;
	justify-content: center;
	transition: 0.15s;
}
.search-container i:hover{
	background: #ccc;
}

.search-container .close{
	display: none;
}
.search-container input:not(:placeholder-shown) ~ .paste{
	display: none;
}
.search-container input:not(:placeholder-shown) ~ .close{
	display: flex;
}



.simple-button {
	display: flex;
	align-items: center;
	gap: 8px;
	background: #0276FF;
	border-radius: 8px;
	border: 0;
	color: #fff;
	cursor: pointer;
	font-size: 15px;
	padding: 8px 14px;
	transition: all 0.15s ease-in-out;
	user-select: none;
	text-decoration: none;
}
.simple-button:hover {
	background: #2589ff;
}
.simple-button:active {
	background: #006AE8;
}
.simple-button.danger{
	background: red;
}
.simple-button.danger:hover{
	background: #dc0000;
}
.simple-button.danger:active{
	background: #b30000;
}
.simple-button.gray{
	background: #999;
}
.simple-button.gray:hover{
	background: gray;
}
.simple-button.gray:active{
	background: dimgray;
}
.simple-button[disabled]{
	cursor: not-allowed;
	background: dimgray;
}

.tiny-button {
	cursor: pointer;
	border-radius: 8px;
	border: 0;
	width: 30px;
	height: 30px;
	flex-shrink: 0;
	display: flex;
	align-items: center;
	justify-content: center;
	background: #eee;
	color: #ffbf00;
	transition: 0.15s;
}
.tiny-button:hover{
	background: #ddd;
}
.tiny-button:active{
	background: #ccc;
}

input[type="checkbox"]{
	appearance: none;
	background-color: #dfe1e4;
	border-radius: 72px;
	height: 20px;
	margin: 0;
	position: relative;
	width: 42px;
	cursor: pointer;
}
input[type="checkbox"]::after {
	background-color: #fff;
	border-radius: 50%;
	content: "";
	height: 14px;
	left: 3px;
	position: absolute;
	top: 3px;
	width: 14px;
}
input[type="checkbox"], input[type="checkbox"]::after {
	transition: all 125ms ease-out;
}
input[type="checkbox"]:hover {
	background-color: #c9cbcd;
}
input[type="checkbox"]:checked {
	background-color: #1c84ff !important;
}
input[type="checkbox"]:checked::after {
	background-color: #fff;
	left: calc(100% - 14px - 3px);
}
input[type="checkbox"]:checked:hover {
	background-color: #2073d6 !important;
}

#settings .grid{
	margin: 10px;
	display: grid;
	grid-template-columns: auto 1fr 1fr;
	align-items: center;
	justify-items: start;
	row-gap: 12px;
	column-gap: 10px;
	font-size: 18px;
	white-space: nowrap;
	border: 1px solid gray;
	padding: 10px;
	border-radius: 12px;
	min-width: fit-content;
}
#settings .grid i {
	justify-self: center;
}
#settings .row {
	display: flex;
	gap: 5px;
	width: 100%;
}
.line {
	flex-shrink: 0;
	grid-column: 1 / -1;
	height: 1px;
	width: 100%;
	background: linear-gradient(90deg, transparent, gray, transparent);
}

#login_button {
	width: 100%;
}

.popup {
	position: fixed;
	background: transparent;
	inset: 0;
	visibility: hidden;
	transition: 0.35s;
	z-index: 2;
}
.popup.show{
	visibility: visible;
	background: rgb(0, 0, 0, 0.5);
}
.popup .popup-wrapper {
	background: var(--body-color);
	width: 85dvw;
	height: 85dvh;
	max-width: 600px;
	top: 50%;
	position: absolute;
	left: 50%;
	translate: -50% -50%;
	border-radius: 16px;
	scale: 0.95;
	transition: 0.35s cubic-bezier(0.22, 1, 0.36, 1);
	overflow: hidden;
	opacity: 0;
	transform: translateY(1rem);
	will-change: scale;
}
.popup .popup-wrapper .content{
	height: 100%;
	overflow-y: auto;
	scrollbar-width: thin;
	max-height: 86vh;
}
.popup.show .popup-wrapper{
	opacity: 1;
	scale: 1;
	transform: translateY(0);
}
.popup .close {
	color: red;
	font-size: 25px;
	position: absolute;
	top: 5px;
	right: 5px;
	cursor: pointer;
	transition: 0.2s;
	will-change: rotate;
}
.popup .close:hover{
	rotate: 90deg;
}
/* ... */

